[gd_scene load_steps=6 format=3 uid="uid://mncslksdipu1"]

[ext_resource type="Script" path="res://scripts/quiz_ui.gd" id="1_25twr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aovv5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_67djw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5q6n0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_11eip"]

[node name="QuizUI" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_25twr")

[node name="Question" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -560.0
offset_top = -316.0
offset_right = 579.0
offset_bottom = -203.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 40
text = "SAMPLE QUESTION "
autowrap_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -245.0
offset_top = -113.0
offset_right = 245.0
offset_bottom = 113.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 100

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 100

[node name="Button" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_aovv5")
text = "OPTION 1"

[node name="Button2" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_67djw")
text = "OPTION 3"

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 100

[node name="Button3" type="Button" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_5q6n0")
text = "OPTION 2"

[node name="Button4" type="Button" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_11eip")
text = "OPTION 4"

[connection signal="pressed" from="HBoxContainer/VBoxContainer/Button" to="." method="_on_button_pressed_1"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Button2" to="." method="_on_button_pressed_2"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer2/Button3" to="." method="_on_button_pressed_3"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer2/Button4" to="." method="_on_button_pressed_4"]
